--- a/_config.yml
+++ b/_config.yml
@@ -111,6 +111,7 @@ author:
   weibo            : generalz
   xing             :
   youtube          :
+  jianshu          : generalz
   cv               : #"/assets/doc/TaoJiang-ResumeCN.pdf"
 
 
