--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "generalzh"
+  name             : "Generalz"
   avatar           : "bio-photo.jpg"
   bio              : "PhD Xi'An Jiaotong University"
   location         : "Xi'An, China"
