--- a/_config.yml
+++ b/_config.yml
@@ -112,7 +112,7 @@ author:
   xing             :
   youtube          :
   jianshu          : http://www.jianshu.com/u/8c2eba89a454
-  cv               : #"/assets/doc/TaoJiang-ResumeCN.pdf"
+  cv               : "/assets/doc/TaoJiang-ResumeCN.pdf"
 
 
 # Reading Files
