--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ author:
   linkedin         : 
   pinterest        :
   soundcloud       :
-  stackoverflow    : # http://stackoverflow.com/users/123456/username
+  stackoverflow    : http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
   twitter          : blakelee
