--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,7 @@ author:
   keybase          :
   instagram        : 
   lastfm           :
-  linkedin         : 
+  linkedin         : http://www.linkedin.com/in/%E5%BB%BA%E5%BC%BA-%E8%B5%B5-45734614b/
   pinterest        :
   soundcloud       :
   stackoverflow    : #http://stackoverflow.com/users/123456/username
@@ -109,11 +109,11 @@ author:
   twitter          : blakelee
   vine             :
   weibo            : generalz
-  xing             :
+  xing             : http://www.jianshu.com/u/8c2eba89a454
   youtube          :
   jianshu          : http://www.jianshu.com/u/8c2eba89a454
   cv               : #"/assets/doc/TaoJiang-ResumeCN.pdf"
-  jianshu               : http://www.jianshu.com/u/8c2eba89a454
+  jianshu          : http://www.jianshu.com/u/8c2eba89a454
 
 
 # Reading Files
