--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ author:
   twitter          : blakelee
   vine             :
   weibo            : generalz
-  xing             : h#ttp://www.jianshu.com/u/8c2eba89a454
+  xing             : http://www.jianshu.com/u/8c2eba89a454
   youtube          :
   jianshu          : http://www.jianshu.com/u/8c2eba89a454
   cv               : #"/assets/doc/TaoJiang-ResumeCN.pdf
