--- a/_config.yml
+++ b/_config.yml
@@ -109,9 +109,9 @@ author:
   twitter          : blakelee
   vine             :
   weibo            : generalz
-  xing             : http://www.jianshu.com/u/8c2eba89a454
+  xing             : #http://www.jianshu.com/u/8c2eba89a454
   youtube          :
-  jianshu          : http://www.jianshu.com/u/8c2eba89a454
+  jianshu          : #http://www.jianshu.com/u/8c2eba89a454
   cv               : #"/assets/doc/TaoJiang-ResumeCN.pdf
 
 # Reading Files
