--- a/_config.yml
+++ b/_config.yml
@@ -111,7 +111,7 @@ author:
   weibo            : generalz
   xing             : #http://www.jianshu.com/u/8c2eba89a454
   youtube          :
-  jianshu          : #http://www.jianshu.com/u/8c2eba89a454
+  jianshu          : http://www.jianshu.com/u/8c2eba89a454
   cv               : #"/assets/doc/TaoJiang-ResumeCN.pdf
 
 # Reading Files
