--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,7 @@ author:
   keybase          :
   instagram        : 
   lastfm           :
-  linkedin         : #%E5%BB%BA%E5%BC%BA-%E8%B5%B5-45734614b/
+  linkedin         : %E5%BB%BA%E5%BC%BA-%E8%B5%B5-45734614b/
   pinterest        :
   soundcloud       :
   stackoverflow    : #http://stackoverflow.com/users/123456/username
