--- a/_config.yml
+++ b/_config.yml
@@ -111,8 +111,8 @@ author:
   weibo            : generalz
   xing             : #http://www.jianshu.com/u/8c2eba89a454
   youtube          :
-  jianshu          : http://www.jianshu.com/u/8c2eba89a454
-  cv               : #"/assets/doc/TaoJiang-ResumeCN.pdf
+  jianshu          : 8c2eba89a454
+  cv               : "/assets/doc/TaoJiang-ResumeCN.pdf"
 
 # Reading Files
 include:
